<resources>
    <string name="app_name">Licenta_Tinder_Caini</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register2">Register</string>
    <string name="login2">Login</string>
    <string name="name">name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="signout">SignOut</string>
    <string name="settings">Settings</string>
    <string name="dog_date">Dog Date</string>
    <string name="the_dog_person_s_dating_app">The Dog Person\'s dating app</string>
    <string name="todo">TODO</string>
    <string name="dogs_date">DOGS DATE</string>
    <string name="submit">SUBMIT</string>
    <string name="email_id">Email Id</string>
    <string name="enter_your_email_address_we_ll_send_you_a_email_to_reset_your_password">Enter your email address we\'ll send you a email to reset your password</string>
    <string name="enter_your_registered_email">Enter your registered email</string>
    <string name="email_nou">Email*</string>
    <string name="reset_password">Reset Password</string>
    <string name="send">Send</string>
    <string name="create_new_account">Create new account</string>
    <string name="user_name">User Name</string>
    <string name="dog_age">Dog Age</string>
    <string name="about_you_and_your_dog">About you and your dog</string>
    <string name="dog_breed2">Dog Breed:</string>
    <string name="dog_breed">Dog Breed:</string>
    <string name="dog_name">Dog Name</string>
    <string name="verify_now">Verify Now!</string>
    <string name="email_not_verified">Email Not Verified!</string>
    <string name="profil">Profil</string>
    <string name="profile">Profile</string>
    <string name="atleast_6_character">At least 6 character</string>
    <string name="mininum_one_number">Mininum one number</string>
    <string name="minimum_one_uppercase">Minimum one uppercase</string>
    <string name="minimum_one_special_symbol">Minimum one special symbol</string>
    <string name="password_must_be">Password must be:</string>
    <string name="type_a_message">Type a message</string>
    <string name="matches">Matches</string>
    <string name="users">Users</string>
    <string name="chats">Chats</string>
    <string name="city">City</string>
    <string name="chat">Chat</string>
    <string name="gender">Gender:</string>
    <string name="logout">Logout</string>
</resources>