<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#BED9E9"
    tools:context=".RegistrationActivity">

    <ImageButton
        android:id="@+id/backtochoose2"
        android:layout_width="match_parent"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="#BED9E9"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="330dp"
        app:cornerRadius="50dp"/>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:textSize="40dp"
        android:fontFamily="cursive"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/create_new_account"/>

    <EditText
        android:id="@+id/etname"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:hint="@string/user_name"
        android:fontFamily="serif"
        android:background="@drawable/shape"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/dogName"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape"
        android:fontFamily="serif"
        android:hint="@string/dog_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/etCity"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape"
        android:fontFamily="serif"
        android:hint="@string/city"
        android:inputType="text" />

    <TextView
        android:id="@+id/DogBreed"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#BED9E9"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="3dp"
        android:text="@string/gender"
        android:fontFamily="cursive"
        android:textColor="@color/black"
        android:textSize="20dp"/>
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_marginEnd="20dp"
        android:background="#BED9E9"
        android:layout_marginTop="3dp"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_height="80dp">

        <RadioButton
            android:background="#BED9E9"
            android:layout_width="wrap_content"
            android:fontFamily="cursive"
            android:layout_height="35dp"
            android:text="@string/male" />

        <RadioButton
            android:background="#BED9E9"
            android:fontFamily="cursive"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/female" />
    </RadioGroup>

    <EditText
        android:id="@+id/etemail"
        android:layout_marginTop="5dp"
        android:background="@drawable/shape"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="10dp"
        android:hint="@string/email"
        android:fontFamily="serif"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etpassword"
        android:background="@drawable/shape"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:fontFamily="serif"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password_must_be"
        android:fontFamily="cursive"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="10dp"
            android:layout_height="10dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="25dp"
            android:layout_gravity="center">
            <ImageView
                android:layout_gravity="center"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:background="#BED9E9"
                />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:fontFamily="cursive"
            android:text="@string/atleast_6_character"
            android:gravity="center|start"
            android:textSize="18dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:id="@+id/card2"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="#BED9E9"
            app:cardCornerRadius="25dp"
            android:layout_gravity="center">
            <ImageView
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="15dp"
                android:layout_height="10dp"
                android:background="@color/black"
                />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/mininum_one_number"
            android:textSize="18dp"
            android:gravity="center|start"
            android:fontFamily="cursive"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:layout_height="20dp"
        android:gravity="center"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:id="@+id/card3"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="#BED9E9"
            app:cardCornerRadius="25dp"
            android:layout_gravity="center">
            <ImageView
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="15dp"
                android:layout_height="10dp"
                android:background="@color/black"
                />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/black"
            android:text="@string/minimum_one_uppercase"
            android:gravity="center|start"
            android:textSize="18dp"
            android:fontFamily="cursive"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="5dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:id="@+id/card4"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:background="#BED9E9"
            app:cardCornerRadius="25dp"
            android:layout_gravity="center">
            <ImageView
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_width="15dp"
                android:layout_height="10dp"
                android:background="@color/black"
                />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@android:color/black"
            android:fontFamily="cursive"
            android:textSize="18dp"
            android:text="@string/minimum_one_special_symbol"
            android:gravity="center|start"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnregister3"
        android:layout_width="match_parent"
        android:background="@drawable/custom_button"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="80dp"
        android:textSize="17dp"
        android:layout_marginRight="80dp"
        android:fontFamily="serif"
        app:cornerRadius="50dp"
        android:text="@string/register2" />
    <ProgressBar
        android:id="@+id/btnpreogressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:elevation="10dp"
        android:visibility="gone"/>
</LinearLayout>

