<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#BED9E9"
    tools:context=".ForgotPasswordActivity">

    <ImageButton
        android:id="@+id/backtologin"
        android:layout_width="match_parent"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:background="#BED9E9"
        android:layout_height="50dp"
        android:layout_marginTop="1dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="330dp"
        app:cornerRadius="50dp"/>

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="15dp"
        android:fontFamily="cursive"
        android:background="@drawable/shape">

        <!--        <TextView-->
        <!--            android:id="@+id/textView"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="FORGOT PASSWORD SCREEN"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:layout_marginLeft="65dp"-->
        <!--            android:textStyle="bold"-->
        <!--            android:textSize="20dp"/>-->

        <TextView
            android:id="@+id/tv_mesaj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:fontFamily="cursive"
            android:text="@string/enter_your_email_address_we_ll_send_you_a_email_to_reset_your_password"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/black"
            android:textSize="22dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_password_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_mesaj"
            android:layout_marginTop="30dp"
            android:fontFamily="cursive"
            android:padding="6dp"
            android:text="@string/email_nou"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etUser_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_password_reset"
            android:background="@drawable/shape"
            android:ems="10"
            android:fontFamily="serif"
            android:hint="@string/enter_your_registered_email"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textSize="17dp" />

        <Button
            android:id="@+id/btnForgotPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:fontFamily="serif"
            android:textSize="17dp"
            android:layout_below="@+id/etUser_email"
            android:textStyle="bold"
            android:background="@drawable/custom_button"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            app:cornerRadius="50dp"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleLarge"
            android:layout_centerVertical="true"
            android:id="@+id/preogressBar"
            android:layout_centerHorizontal="true"
            android:elevation="10dp"
            android:visibility="gone"/>


    </RelativeLayout>


</LinearLayout>
